indentation error fixation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,10 @@ on:
   workflow_dispatch:
     # types: [trigger-cd]
     inputs:
-      description: 'region'
-      required: true
-      default: 'us-east-1'
+      region: 
+        description: 'region'
+        required: true
+        default: 'us-east-1'
 jobs:
   deploy:
     runs-on: ubuntu-latest
